# osLabs

kp/: CMakeLists.txt  Makefile.txt  main.cpp  server.cpp  test.cpp
kp/report/: KP.docx  KP_tit.docx
lab1/report/: report1.docx  titul.docx
lab2/: CMakeLists.txt  main.cpp  test.cpp
lab2/include/: KMeans.h  Point.h  Timer.h  Utils.h
lab2/report/: report2.docx  titul.docx
lab2/src/: KMeans.cpp  Timer.cpp  Utils.cpp
lab3/: CMakeLists.txt  child1.c  child1.txt  child2.c  child2.txt  full_strace.txt  parent.c  parent.txt  strace_output.txt  tests.cpp
lab3/report/: report3.docx  titul.docx
lab4/: CMakeLists.txt  test.cpp
lab4/.devcontainer/: Dockerfile  devcontainer.json
lab4/include/: gcd_euclid_and_binary.h  gcd_naive_and_ternary.h
lab4/report/: report4.docx  titul.docx
lab4/src/: gcd_euclid_and_binary.c  gcd_naive_and_ternary.c  program1.c  program2.c
lab57/: CMakeLists.txt  client.cpp  server.cpp  tests.cpp
lab57/report/: report5-7.docx  titul.docx
lab8/: report8.docx  titul.docx
